[package]
name = "rpi-gpio-samples"
version = "0.1.0"
authors = ["Nataraj Basappa <n5j.b5a@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "blink"
path = "src/blink/main.rs"

[[bin]]
name = "switch"
path = "src/switch/main.rs"

[[bin]]
name = "rgb_led"
path = "src/rgb_led/main.rs"

[dependencies]
rppal = "0.11.3"